# pintos-rs

./: README  TODO
halt/: Cargo.toml  main.c
halt-rs/: Cargo.toml
halt-rs/src/: lib.rs
halt/src/: lib.rs  main.rs
kernel/: Cargo.toml  Makefile  rust-toolchain
kernel-rs/src/: lib.rs
kernel/src/: lib.rs
libpintos-rs/: .gitignore  Cargo.toml  build.rs
libpintos-rs/src/: lib.rs
rust/: Cargo.toml  Makefile
rust/src/: lib.rs
src/: Makefile.build  Makefile.userprog
src/examples/: .gitignore  Makefile  rust.c  rust.h
src/userprog/: syscall.c
