[package]
name = "pintos-rs"
version = "0.1.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>"]
edition = "2018"

[lib]
name = "rust"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.libc]
version = "0.2"
default-features = false
features = ["extra_traits"]
